syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.keepreal.madagascar.vanga";

import "common.proto";

message BillingInfoMessage {
  string id = 1;
  string userId = 2;
  string name = 3;
  string mobile = 4;
  string idNumber = 5;
  string accountNumber = 6;
  bool isVerified = 7;
}

message RetrieveBillingInfoByUserIdRequest {
  string userId = 1;
}

message BillingInfoResponse {
  CommonStatus status = 1;
  BillingInfoMessage billingInfo = 2;
}

message UpdateBillingInfoByUserIdRequest {
  string userId = 1;
  string name = 2;
  string mobile = 3;
  string idNumber = 4;
  string accountNumber = 5;
}

service BillingInfoService {
  rpc RetrieveBillingInfoByUserId (RetrieveBillingInfoByUserIdRequest) returns (BillingInfoResponse) {};
  rpc UpdateBillingInfoByUserId (UpdateBillingInfoByUserIdRequest) returns (BillingInfoResponse) {};
}